Fix background command execution and completion